Automatically backed up by Learn

--- a/my_list_.html
+++ b/my_list_.html
@@ -1,6 +1,4 @@
-"Lana Del Rey Songs"
-"Born To Die"
-"Ride"
-"Brooklyn Baby"
-"13 Beaches"
-"White Mustang"
+<li>"Lana Del Rey Songs"</li>
+<li>"Born To Die"</li>
+<li>"Ride"</li>
+<li>"Brooklyn Baby</li>
